fix nav title on mobile

--- a/tahp/public/css/desk.css
+++ b/tahp/public/css/desk.css
@@ -156,8 +156,7 @@ a:hover {
   }
 
   .navbar-title {
-    font-size: 18px;
-    font-weight: 600;
+    font-size: 12px;
   }
 
   .navbar .nav-item .fa-solid,
